dashdemux: inherit bitstreamSwitching from Period to AdaptationSet

https://bugzilla.gnome.org/show_bug.cgi?id=752340